# communication_node

./: .gitignore  LICENSE  README.md  instructions.txt  results.txt
results_pack/map1/: data_ploter.m
results_pack/map2/: data_ploter.m
src/: README.md
src/aut_exploration/: CMakeLists.txt  package.xml
src/aut_exploration/action/: Agent_toMaster.action  Master_toAgent.action
src/aut_exploration/launch/: cv.launch  find.launch  floor_launcher.launch  floor_master.launch  launcher.launch  master.launch  say_default.launch  victim_pose.launch  vp.launch
src/aut_exploration/msg/: Agent_toMaster.msg  Data_MtA.msg  Master_toAgent.msg
src/aut_exploration/scripts/: Percentage_node.py  exploration_client.py  exploration_master.py  exploration_server.py  floor_master.py  master.py  sosexp (action).py  sosexp.py
src/aut_exploration/src/: alive_victim.cpp  opencv_test.cpp  victim_position.cpp  vp.cpp
src/aut_exploration/srv/: Agent_service.srv  Master_service.srv  Percentage_service.srv
src/burgard/: CMakeLists.txt  package.xml
src/burgard/launch/: burgard.launch
src/burgard/scripts/: Algorithms.py  Permission_granter.py  burgard_exploration.py  burgard_exploration2.py  burgard_exploration3.py  costmap_tools.py  frontier_search.py
src/communication_node/: CMakeLists.txt  package.xml
src/communication_node/communication_node/scripts/: message_handler.py  messenger_api.py  registration_client.py  test.py
src/communication_node/communication_node/src/: registration_client.cpp
src/communication_node/launch/: map_path_info.launch  message_handler.launch  navigation.launch  navigation2.launch  navigation3.launch  spawn.launch  spawn2.launch  test.launch  update_info.launch
src/communication_node/msg/: Data_AtM.msg
src/communication_node/scripts/: environment_information.py  map_path.py  message_handler.py  message_handler_experimental.py  messenger_api.py  propagation_models.py  receive_test.py  registration_client.py  system_test_publisher.py  system_test_publisher2.py  system_test_publisher3.py  system_test_publisher4.py  system_test_subscriber.py  system_test_subscriber2.py  system_test_subscriber3.py  system_test_subscriber4.py  test.py  update_info.py
src/communication_node/src/: environment_information.py  message_handler.py  messanger_api.cpp  messenger_api.py  propagation_models.py  registration_client.cpp  registration_server.cpp  test.py
src/gazebo_information_plugins/: CMakeLists.txt  package.xml
src/gazebo_information_plugins/scripts/: get_info.py
src/gazebo_information_plugins/src/: SimpleWorldPlugin.cpp  SimpleWorldPlugin_v7.cpp  simple_world_plugin.cpp
src/gazebo_information_plugins_v8/scripts/: get_info.py
src/gazebo_plugins/: CMakeLists.txt
src/gazebo_plugins/src/: simple_world_plugin2.cpp
src/hector_mapping/src/: HectorMappingRos.cpp  HectorMappingRos.h
src/m-explore/map_merge/launch/: map_merge.launch
src/p3at_description/urdf/: pioneer3at_body.xacro
src/registration_node/: CMakeLists.txt  Readme.md  package.xml
src/registration_node/src/: registration_client.cpp  registration_server.cpp
src/setup/: CMakeLists.txt  package.xml
src/setup/config/P3AT_navigation/: costmap_common_params.yaml  global_costmap_params.yaml
src/setup/config/P3AT_navigation/param/: costmap_common_params_pioneer.yaml
src/setup/launch/: gserver.launch  map_merge.launch  map_path.launch  p3at_gmapping.launch  p3at_hmapping.launch  p3at_main.launch  p3at_move_base.launch  p3at_multi_agent.launch  p3at_spawn.launch  sos_rqt.launch  sos_viz.launch
src/setup/rviz/: day1.rviz  huskyvizconfig.rviz  quadviz.rviz  sosvr_thermal.perspective  validconfig.rviz
src/setup/scripts/: map_percent.py  path.py
src/setup/src/: test.py
src/setup/worlds/: WCS_test.world  WCS_test1.world  WCS_test2.world  WCS_test3.world  WCS_test4.world  communication_test.world  communication_test_2.world  communication_test_3.world  communication_test_4.world  communication_test_big.world  complete_world.world  complete_world2.world  complete_world_really_final.world  super_big.world  super_world.world  suprem_world.world  suprem_world2.world  test.world  test_big.world
src/sosvr_gazebo_plugins/: CMakeLists.txt  package.xml
src/sosvr_gazebo_plugins/scripts/: getInfo.py
src/sosvr_gazebo_plugins/src/: Contact_plugin.cpp  simple_world_plugin.cpp  simple_world_plugin2.cpp
test_results/: results.txt  results2.txt
test_results/results10/: data_ploter.m
test_results/results11/: data_ploter.m
test_results/results12/: data_ploter.m
test_results/results5/: map
test_results/results6/: r6m.txt  r6p.txt
test_results/results8/: data_ploter.m
test_results/results9/: data_ploter.m
